# concerto

./: .editorconfig  .gitattributes  .gitignore  .gitleaksignore  .pre-commit-config.yaml  .zenodo.json  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.cpu  Dockerfile.gpu  LICENSE  MAINTENANCE.md  Makefile  NOTICE  README.md  SECURITY.md  mkdocs.yml  osv-scanner.toml  pyproject.toml  pyright-config.json  pyrightconfig.json  release-please-config.json  ruff.toml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  branch-protection.json  dependabot.yml
.github/ISSUE_TEMPLATE/: adr-question.md  bug.md  feature.md
.github/workflows/: ci.yml  docs-deploy.yml  release.yml  repro-rows.yml  security.yml
adr/: ADR-001-fork-vs-build.md  ADR-002-rl-framework.md  ADR-003-comm-interface.md  ADR-004-safety-filter.md  ADR-005-simulator-base.md  ADR-006-partner-policy-assumptions.md  ADR-007-heterogeneity-axis-selection.md  ADR-008-hrs-bundle.md  ADR-009-partner-zoo.md  ADR-010-fm-partner.md  ADR-011-baseline-set.md  ADR-012-license.md  ADR-013-real-robot-platform.md  ADR-014-safety-reporting.md  ADR-015-tier-task-scope.md  ADR-016-spike-run-schema.md  ADR-017-observability-and-experiment-tracking.md  ADR-018-black-box-partner-contract.md  ADR-026-coupling-validity-criterion.md  ADR-027-chamber-bench-v1-protocol.md  ADR-028-result-bundle-schema-v3.md  ADR-029-co-hold-secure-gate0-program.md  ADR-INDEX.md  README.md  _template.md  international_axis_evidence.md  spike_004A_safety_mode.md
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/observability/: index.html
dev/reference/: refs.bib
dev/search/: search_index.json
dev/stylesheets/: logo-theme-swap.css
docs/: index.md  observability.md
docs/explanation/: architecture.md  evaluation-protocol.md  faq.md  phase0-results.md  positioning.md  principles.md  threat-model.md  why-aht.md  why-conformal.md  why-maniskill.md
docs/how-to/: RELEASE_FOLLOWUPS.md  add-filter.md  add-partner.md  reproduce-results.md  run-on-gpu.md  run-spike.md  submit-leaderboard.md  verified-install.md
docs/reference/: adrs.md  api.md  datasheet.md  evaluation.md  glossary.md  literature.md  standards.md
docs/stylesheets/: logo-theme-swap.css
docs/tutorials/: hello-spike.md  stage0-smoke.md
notes/local/: p1_05_post_clamp_reprobe_2026-05-20.jsonl
notes/tier1/: construct_validity_in_cooperative_evaluation.md
release/: chamber-bench-v1.0.manifest.json
scripts/: check_changelog_completeness.py  check_coverage_floors.py  check_dist_metadata.py  check_licences.py  check_no_ai_mentions.sh  check_readme_quickstart.py  check_repro_docs.py  generate_partner_fingerprints.py  render_leaderboard_table.py  render_partner_cards.py  render_task_cards.py  render_task_table.py  repro_row.py  smoke_eval.sh  wandb_backfill.py
scripts/harl-fork-patches/: README.md
scripts/release/: prepare_hosting.py  upload_hosting.py
scripts/repro/: _admission_power_pilot.py  _braking_parity_audit_driver.py  _cocarry_base_probe.py  _cocarry_base_probe_boundary.py  _cocarry_decouple_ablation.py  _cocarry_rung3_calibrate.py  _cocarry_rung3_ph_measure.py  _cocarry_rung3_power_sim.py  _cocarry_rung4_eh_calibrate.py  _cocarry_rung4b_coupling_sweep.py  _cocarry_rung4c_eh_measure.py  _cocarry_rung4c_robustness.py  _cocarry_rung4c_sameego_floor.py  _cocarry_rung4d_pose_falsification.py  _cocarry_rung4e_taskfair_search.py  _cocarry_rung5_calibrate.py  _cocarry_rung5_measure.py  _cocarry_rung5_power_sim.py  _cocarry_rung5_refreeze.py  _cocarry_rung5_rig_revalidate.py  _cocarry_rung5_select_freeze.py  _coholdsecure_precheck.py  _coinsert_s0_power_sim.py  _coinsert_s1_fidelity_sweep.py  _coinsert_s1_mujoco_oracle.py  _coinsert_s2_bracing_probe.py  _coinsert_s2_fixedlink_probe.py  _coinsert_s2_fixedlink_tuning_probe.py  _coinsert_s2_friction_probe.py  _coinsert_s2_round_sweep.py  _handover_ladder_slice0_probe.py  _handover_place_gate0_clearance_mismatch_overlay.py  _handover_place_gate0_power_sim.py  _handover_place_gate0_run.py  braking_parity_comparative_audit.sh  cocarry_base_probe.sh  cocarry_decouple_ablation.sh  cocarry_rung0_stability.sh  cocarry_rung1_matched.sh  cocarry_rung2_fmax_reference.sh  (+22 more)
spikes/preregistration/: AS.yaml  CM.yaml  CR.yaml  OM.yaml  PF.yaml  SA.yaml  cocarry_decouple_ablation_prereg.json
src/chamber/: __init__.py
src/concerto/: __init__.py  cli.py
tests/: conftest.py  fakes.py
tests/docs/: test_readme_quickstart.py
tests/fixtures/: spike_run_v2_post_widening.json
tests/integration/: test_admission_cells_real.py  test_co_hold_secure_real.py  test_cocarry_real.py  test_cocarry_rung2_real.py  test_cocarry_rung3_ph_real.py  test_cocarry_rung4_eh_real.py  test_coinsert_real.py  test_comm_round_trip.py  test_cpu_determinism.py  test_draft_zoo.py  test_ego_only_filter.py  test_empirical_guarantee.py  test_eval_multi_axis.py  test_evaluation_spine.py  test_oscbf_aggregate.py  test_partner_set_floors.py  test_partner_swap.py  test_ppo_observability.py  test_rollout_recorder_env_render.py  test_safety_in_loop.py  test_smoke_eval_cli.py  test_stage0_adapter_fake.py  test_stage0_adapter_real.py  test_stage0_smoke.py  test_stage1_as_fake.py  test_stage1_as_fake_stage1b_dispatch.py  test_stage1_as_real.py  test_stage1_as_real_stage1b.py  test_stage1_om_fake.py  test_stage1_om_fake_stage1b_dispatch.py  test_stage1_om_real.py  test_stage1_om_real_stage1b.py  test_stage1_om_vectorised_real.py  test_stage1_pickplace_real.py  test_stage1_safety_in_training.py  test_stage1_vectorised_real.py  test_trained_policy_factory_fake.py  test_trained_policy_factory_real.py  test_trainer_obs_reader_contract.py  test_training_with_braking_fallback.py  (+2 more)
tests/property/: test_action_repeat.py  test_advantage_decomposition.py  test_aoi.py  test_bounds_action_norm_inconsistency_documented.py  test_braking.py  test_braking_multipair.py  test_bundle_tamper.py  test_canonical_pair_order.py  test_cbf_qp.py  test_centralized_heterogeneous.py  test_coinsert_reset.py  test_conformal_loss.py  test_oscbf.py  (+6 more)
(+1122 files in other folders)
