[project]
name = "concerto-multirobot"
version = "0.7.0"
description = "Heterogeneous Multi-Robot Ad-Hoc Teamwork — benchmark + safety stack."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { file = "LICENSE" }
authors = [
  { name = "Farhad Safaei", email = "cooperative.physical.ai@gmail.com" },
]
keywords = [
  "multi-robot", "ad-hoc-teamwork", "manipulation", "control-barrier-functions",
  "conformal-prediction", "heterogeneous-marl", "robotics-benchmark",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Runtime deps. Each entry is justified by an ADR or a tooling decision.
dependencies = [
  "numpy>=1.26,<2.2",
  "torch>=2.8,<2.9",                 # ADR-002 PyTorch; >=2.8 closes GHSA-53q9-r3pm-6pq6, GHSA-887c-mr87-cxwp, GHSA-3749-ghw9-m3mg
  "gymnasium>=1.3.0,<2.0",             # standard env API
  "mani-skill==3.0.1",               # ADR-001; git commit a4a4f92 pinned in uv.lock
  "sapien>=3.0,<4.0",                # ADR-005 (transitive but pinned for clarity)
  "warp-lang>=1.13.0,<2.0",             # ADR-005 soft-body
  "cvxpy>=1.8.2,<2.0",                 # ADR-004 CBF-QP solver
  "qpsolvers[clarabel,osqp]>=4.0",   # fallback CBF-QP solver matrix
  "scipy>=1.17.1,<2.0",
  "pydantic>=2.6,<3.0",              # config models
  "hydra-core>=1.3.2,<2.0",            # experiment configs
  "omegaconf>=2.3,<3.0",
  "rich>=15.0.0",                      # CLI rendering
  "structlog>=24.1",                 # structured logs
  "wandb>=0.17,<1.0",                # experiment tracking
  # NOTE: HARL is intentionally *not* a runtime dependency. PyPI rejects
  # any wheel METADATA that carries a `git+URL` direct reference (`Can't
  # have direct dependency`, HTTP 400 from pypi.org/legacy/). HARL lives
  # in the `[dependency-groups].train` group below — installed by
  # `uv sync --group train` from a source checkout, not by `pip install
  # concerto-multirobot`. The Phase-1 follow-up that restores a
  # single-command training install is tracked in
  # https://github.com/fsafaei/concerto/issues/132 (publish `harl-aht`
  # to PyPI). See ADR-002 §Decisions and §Revision history (2026-05-16
  # train-group scoping) for the design rationale.
]

[project.optional-dependencies]
docs = [
  "mkdocs>=1.6.1", "mkdocs-material>=9.5", "mkdocstrings[python]>=0.25",
  "mike>=2.0",
]
dev = [
  "ruff>=0.6", "pyright>=1.1.409",
  "pre-commit>=3.7", "commitizen>=3.27",
  "pytest>=8.2", "pytest-cov>=5.0", "pytest-xdist>=3.6",
  "pytest-benchmark>=4.0", "hypothesis>=6.108",
  "pip-licenses>=4.0", "cyclonedx-bom>=4.0",
  "ipykernel", "ipython",
]
viz = ["matplotlib>=3.9", "seaborn>=0.13.2"]
# ADR-008 / ADR-014: rliable-style performance profiles are an optional
# render path. IQM and optimality gap are computed natively in
# ``chamber.evaluation.bootstrap``; only performance profiles require
# the extra. Install with ``uv sync --extra eval``. The ``pandas<3``
# pin keeps rliable's ``arch`` dependency importable — rliable still
# bounds ``arch<8.0``, and arch <8.0 raises ``TypeError`` on import
# under pandas 3.0 (deprecate_kwarg signature change).
eval = [
  "rliable>=1.0,<2.0",
  "pandas>=1.4,<3.0",
]

[project.scripts]
concerto                = "concerto.cli:main"            # method-level entry (Phase-0 stub)
chamber-spike           = "chamber.cli.spike:main"
chamber-eval            = "chamber.cli.eval:main"
chamber-render-tables   = "chamber.cli.render_tables:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/concerto/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/concerto", "src/chamber"]   # both top-level packages ship in one distribution

[dependency-groups]
dev = [
  "ruff>=0.6", "pyright>=1.1.409", "pre-commit>=3.7", "commitizen>=3.27",
  "pytest>=8.2", "pytest-cov>=5.0", "pytest-xdist>=3.6",
  "pytest-benchmark>=4.0", "hypothesis>=6.108",
  "pip-licenses>=4.0", "cyclonedx-bom>=4.0",
]
# ADR-002 §Decisions + §Revision-history (2026-05-16): HARL is scoped to
# a PEP 735 dependency group rather than a runtime dependency because
# PyPI rejects wheel METADATA containing `git+URL` direct references.
# Dependency groups are uv-only and are NOT shipped in METADATA — the
# wheel uploads cleanly while source-checkout users get HARL via
# `uv sync --group train`. The Phase-1 follow-up (publish `harl-aht` to
# PyPI, then move it back to `[project.optional-dependencies].train` or
# `[project].dependencies`) is tracked in #132. The pin is by 40-char
# SHA: the fork lives at fsafaei/harl-fork; v0.1.0-aht layers the
# CONCERTO AHT-wrapper patch (EgoAHTHAPPO + Hydra runner + env adapter)
# on top of v0.0.0-vendored.
train = [
  "harl @ git+https://github.com/fsafaei/harl-fork.git@56436e4da9453cf124b2b814e0d270db58859dd9",  # T4b.7 v0.1.0-aht
]

[tool.pytest.ini_options]
addopts = [
  "-ra", "--strict-markers", "--strict-config",
  "--cov=concerto", "--cov=chamber",
  "--cov-report=term-missing", "--cov-report=xml",
  "--hypothesis-show-statistics",
]
testpaths = ["tests"]
markers = [
  "slow: tests slower than 1 second",
  "gpu: tests requiring CUDA",
  "smoke: ADR-001 / ADR-007 Stage 0 smoke tests",
  "spike: spike-bench tests (Stage 1/2/3)",
]

[tool.coverage.run]
branch = true
source = ["concerto", "chamber"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]
