[project]
name = "concerto-multirobot"
version = "0.7.0"
description = "Heterogeneous Multi-Robot Ad-Hoc Teamwork — benchmark + safety stack."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { file = "LICENSE" }
authors = [
  { name = "Farhad Safaei", email = "cooperative.physical.ai@gmail.com" },
]
keywords = [
  "multi-robot", "ad-hoc-teamwork", "manipulation", "control-barrier-functions",
  "conformal-prediction", "heterogeneous-marl", "robotics-benchmark",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Runtime deps. Each entry is justified by an ADR or a tooling decision.
dependencies = [
  "numpy>=1.26,<2.2",
  "torch>=2.9,<3.0",                 # ADR-002 PyTorch; >=2.8 closes GHSA-53q9-r3pm-6pq6, GHSA-887c-mr87-cxwp, GHSA-3749-ghw9-m3mg; >=2.9 closes PYSEC-2025-203/204/206 (availability-only AV:N C:N I:N A:H/L). Pinned to the cu128 wheel index on Linux via [tool.uv.sources] below — torch 2.12+ defaults to cu130 which is incompatible with NVIDIA driver 535.x (CUDA 12.x runtime). Cuda-major coupling discipline pinned in ADR-002 §Revision history (2026-05-20).
  "gymnasium>=1.3.0,<2.0",             # standard env API
  "mani-skill==3.0.1",               # ADR-001; git commit a4a4f92 pinned in uv.lock
  "sapien>=3.0,<4.0",                # ADR-005 (transitive but pinned for clarity)
  "pytorch_kinematics>=0.7,<1.0",    # ADR-007 §Stage 1b (P1.03); promoted from transitive (via mani-skill) so the Stage1PickPlaceEnv Jacobian provider has a load-bearing direct dep. Same library ManiSkill's own IK uses; pinning <1.0 locks the API surface against the semver-breaking 1.x bump.
  "warp-lang>=1.13.0,<2.0",             # ADR-005 soft-body
  "cvxpy>=1.8.2,<2.0",                 # ADR-004 CBF-QP solver
  "qpsolvers[clarabel,osqp]>=4.0",   # fallback CBF-QP solver matrix
  "scipy>=1.17.1,<2.0",
  "pydantic>=2.6,<3.0",              # config models
  "hydra-core>=1.3.2,<2.0",            # experiment configs
  "omegaconf>=2.3,<3.0",
  "rich>=15.0.0",                      # CLI rendering
  "structlog>=24.1",                 # structured logs
  "wandb>=0.17,<1.0",                # experiment tracking
  # ADR-002 §Decisions + §Revision-history (2026-05-19): HARL is consumed
  # as the published `harl-aht` PyPI distribution (the CONCERTO ego-AHT
  # fork of PKU-MARL/HARL — see fsafaei/harl-fork#1). The earlier
  # `[dependency-groups].train` workaround for #131 (git+URL pin in a
  # PEP 735 group, kept out of wheel METADATA) was superseded by #132
  # once harl-aht v0.1.0 shipped to TestPyPI. The `harl` import path is
  # preserved (distribution name is `harl-aht`, import path is `harl`).
  "harl-aht>=0.1.0,<0.2.0",
]

# Rendered on the PyPI project page and checked by
# scripts/check_dist_metadata.py before any upload (release.yml).
[project.urls]
Homepage = "https://github.com/fsafaei/concerto"
Documentation = "https://fsafaei.github.io/concerto/"
Repository = "https://github.com/fsafaei/concerto"
Issues = "https://github.com/fsafaei/concerto/issues"
Changelog = "https://github.com/fsafaei/concerto/blob/main/CHANGELOG.md"

[project.optional-dependencies]
docs = [
  "mkdocs>=1.6.1", "mkdocs-material>=9.5", "mkdocstrings[python]>=0.25",
  "mike>=2.0",
]
dev = [
  "ruff>=0.6", "pyright>=1.1.409",
  "pre-commit>=3.7", "commitizen>=3.27",
  "pytest>=8.2", "pytest-cov>=5.0", "pytest-xdist>=3.6",
  "pytest-benchmark>=4.0", "hypothesis>=6.108",
  "pip-licenses>=4.0", "cyclonedx-bom>=4.0",
  "ipykernel", "ipython",
]
viz = ["matplotlib>=3.9", "seaborn>=0.13.2"]
# P1.05.11 / ADR-017 §Decisions: optional extra for the rollout recorder's
# MP4 encode path. ``imageio`` is already a transitive dep via ManiSkill
# (uv.lock line 1165); pinning the ``[ffmpeg]`` variant + version here
# makes the rollout-recorder install story explicit. The recorder imports
# lazily and degrades to JSONL-only when ``imageio`` is missing, so
# callers who skip this extra still get the per-step rollout JSONLs.
observability = [
  "imageio[ffmpeg]>=2.31",
]
# ADR-008 / ADR-014: rliable-style performance profiles are an optional
# render path. IQM and optimality gap are computed natively in
# ``chamber.evaluation.bootstrap``; only performance profiles require
# the extra. Install with ``uv sync --extra eval``. The ``pandas<3``
# pin keeps rliable's ``arch`` dependency importable — rliable still
# bounds ``arch<8.0``, and arch <8.0 raises ``TypeError`` on import
# under pandas 3.0 (deprecate_kwarg signature change).
eval = [
  "rliable>=1.0,<2.0",
  "pandas>=1.4,<3.0",
]

[project.scripts]
concerto                = "concerto.cli:main"            # method-level entry (Phase-0 stub)
chamber-spike           = "chamber.cli.spike:main"
chamber-eval            = "chamber.cli.eval:main"
chamber-render-tables   = "chamber.cli.render_tables:main"
chamber-analyze         = "chamber.cli.analyze:main"            # P1.05.11; ADR-017

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/concerto/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/concerto", "src/chamber"]   # both top-level packages ship in one distribution

[dependency-groups]
dev = [
  "ruff>=0.6", "pyright>=1.1.409", "pre-commit>=3.7", "commitizen>=3.27",
  "pytest>=8.2", "pytest-cov>=5.0", "pytest-xdist>=3.6",
  "pytest-benchmark>=4.0", "hypothesis>=6.108",
  "pip-licenses>=4.0", "cyclonedx-bom>=4.0",
]

# Contact-fidelity oracle (dev-only; NOT a runtime dependency of the wheel).
# MuJoCo is the high-fidelity contact engine used as the second independent
# line for the co-insert contact-force validation — a two-touchpoint tool (the
# S1 fidelity check + the S6 re-score), not a maintained parallel stack. MuJoCo
# is Apache-2.0 (ADR-012-compatible). The chamber/concerto import surface never
# depends on it; only the committed repro generators under scripts/repro/ do.
oracle = [
  "mujoco>=3.1",
]

# harl-aht ships to TestPyPI for the v0.x release line (mirrors
# concerto-multirobot's own TestPyPI-for-v0.x policy in the release
# workflow). Promote to real PyPI at v1.x; this block goes away
# when the source registry is the default index.
[[tool.uv.index]]
name = "test-pypi"
url = "https://test.pypi.org/simple/"
explicit = true   # only packages explicitly routed to this index resolve here

# ADR-002 §Revision history (2026-05-20): pin torch to PyTorch's
# cu128 wheel index on Linux. From torch 2.12 onwards the PyPI
# default wheel ships cu130, which requires NVIDIA driver >=580
# (CUDA toolkit 13.x runtime). The project's RTX 2080 box ships
# driver 535.x — incompatible with cu130. Pinning at the wheel-
# index level (rather than the version specifier) lets us bump
# torch within the cu128 series without dragging in the cu130-
# default-wheel breakage. Mac / Windows hosts still resolve torch
# via the PyPI default (CPU on Mac, no platform mismatch).
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true   # only torch (and torch-aligned cuda nvidia-* wheels) resolve here

[tool.uv.sources]
harl-aht = { index = "test-pypi" }
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[tool.pytest.ini_options]
addopts = [
  "-ra", "--strict-markers", "--strict-config",
  "--cov=concerto", "--cov=chamber",
  "--cov-report=term-missing", "--cov-report=xml",
  "--hypothesis-show-statistics",
]
testpaths = ["tests"]
markers = [
  "slow: tests slower than 1 second",
  "gpu: tests requiring CUDA",
  "smoke: ADR-001 / ADR-007 Stage 0 smoke tests",
  "spike: spike-bench tests (Stage 1/2/3)",
]

[tool.coverage.run]
branch = true
source = ["concerto", "chamber"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]
